# postern

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs  stele.config.json
contract/: main.stele  sql-exceptions.json
contract/.cache/: hash-manifest.json
contract/proposals/: agent-additions.stele
crates/: Cargo.toml
crates/postern-adapters/: Cargo.toml
crates/postern-adapters/src/: lib.rs
crates/postern-adapters/src/common/: mod.rs  object.rs
crates/postern-adapters/src/docker_logs/: classify.rs  constraint.rs  execute.rs  intent.rs  mod.rs
crates/postern-adapters/src/http/: classify.rs  constraint.rs  execute.rs  intent.rs  mod.rs
crates/postern-adapters/src/postgres/: classify.rs  constraint.rs  discover.rs  execute.rs  intent.rs  mod.rs
crates/postern-adapters/tests/: common.rs  disguise_corpus.rs  docker_logs.rs  http.rs  postgres_classify.rs  postgres_constraint.rs  postgres_execute.rs  postgres_intent.rs
crates/postern-adapters/tests/corpus/: classify_cases.json  constraint_cases.json  disguise.json  docker_logs_cases.json  execute_cases.json  http_cases.json  intent_classify.json  intent_roundtrip.json
crates/postern-cli/: Cargo.toml
crates/postern-cli/src/: error.rs  lib.rs  main.rs
crates/postern-cli/src/bridge/: mod.rs  stdio.rs
crates/postern-cli/src/command/: dispatch.rs  intent.rs  mod.rs  tree.rs
crates/postern-cli/src/init/: claude_md.rs  mod.rs  wizard.rs
crates/postern-cli/src/render/: deny_view.rs  envelope.rs  mod.rs  table.rs
crates/postern-cli/src/reqspec/: capability.rs  mod.rs  query.rs
crates/postern-cli/src/transport/: mod.rs  uds.rs
crates/postern-cli/tests/: bridge.rs  command.rs  error.rs  init.rs  render.rs  reqspec.rs  transport.rs
crates/postern-core/: Cargo.toml
crates/postern-core/src/: lib.rs
crates/postern-daemon/: Cargo.toml
crates/postern-daemon/src/: assemble.rs  error.rs  lib.rs  main.rs  registry.rs
crates/postern-daemon/src/boot/: mod.rs  real.rs  selfcheck.rs  sockets.rs
crates/postern-daemon/src/bootstrap/: mod.rs
crates/postern-daemon/src/config/: mod.rs
crates/postern-daemon/src/connpool/: backoff.rs  lease.rs  mod.rs  pool.rs
crates/postern-daemon/src/control/: approvals.rs  audit_read.rs  auth.rs  dto.rs  endpoints.rs  mod.rs  repo.rs  router.rs  verify.rs
crates/postern-daemon/src/control/handlers/: bindings.rs  misc.rs  mod.rs  mode_grants.rs  principals.rs  resources.rs  roles.rs
crates/postern-daemon/src/identity/: api_key.rs  expiry.rs  local_process.rs  mod.rs  secret_auth.rs  token.rs
crates/postern-daemon/src/kernel/: audit_phase.rs  mod.rs  pipeline.rs
crates/postern-daemon/src/sanitize/: mod.rs  scrubber.rs
crates/postern-daemon/src/shells/: listener.rs  mod.rs  serve.rs
crates/postern-daemon/src/shells/http/: mod.rs
crates/postern-daemon/src/shells/mcp/: mod.rs
crates/postern-daemon/src/sweeper/: mod.rs
crates/postern-daemon/tests/: assembly.rs  boot.rs  connpool.rs  control.rs  d1_config.rs  d1_init.rs  d1_preconditions.rs  d1_socket_factory.rs  d1_uid_probe.rs  d2b_audit_misc.rs  d2b_auth.rs  d2b_handlers.rs  d2b_mode_grants.rs  d2b_repo.rs  d2b_resources.rs  d2b_roles_bindings.rs  d2bx_adapter.rs  d2bx_handlers2.rs  e2e_acceptance.rs  error_mapping.rs  identity.rs  kernel_pipeline.rs  registries.rs  sanitize.rs  shells.rs  sweeper.rs  verify.rs
crates/postern-daemon/tests/e2e_corpus/: disguise.json
crates/postern-daemon/tests/verify_corpus/: probes.json
crates/postern-secrets/: Cargo.toml
crates/postern-store/: Cargo.toml
crates/postern-store/src/: lib.rs  schema.rs  schema.sql
crates/postern-store/src/audit/: mod.rs  record.rs  scan.rs  sink.rs
crates/postern-store/src/base/: db.rs  error.rs  meta.rs  mod.rs  normalize.rs  scope.rs  timestamp.rs  write.rs
crates/postern-store/src/migrate/: ddl.rs  mod.rs
crates/postern-store/src/policy/: mod.rs  repo.rs
crates/postern-store/src/snapshot/: build.rs  mod.rs  view.rs
crates/postern-store/tests/: audit.rs  base.rs  d2bx_bindings_settings.rs  d2bx_constraints.rs  d2bx_mode_grants.rs  policy.rs  policy_rev.rs  schema_migrate.rs  snapshot.rs
crates/postern-transports/: Cargo.toml
crates/postern-transports/src/: error.rs  lib.rs
crates/postern-transports/src/chan/: close.rs  inner.rs  mod.rs
crates/postern-transports/src/direct/: mod.rs  open.rs
crates/postern-transports/src/health/: mod.rs  state.rs
crates/postern-transports/src/keepalive/: clock.rs  mod.rs  renew.rs
crates/postern-transports/src/pump/: bridge.rs  mod.rs
crates/postern-transports/src/ssh/: mod.rs
crates/postern-transports/src/ssm/: mod.rs
crates/postern-transports/tests/: chan.rs  direct.rs  error_scrub.rs  feature_gated.rs  health.rs  keepalive.rs  pump.rs
dist-windows/: README.txt  build-console.ps1  check-health.bat  start-postern.bat
docs/: 本地安全网关-技术设计文档.md  本地安全网关-核心设计记录.md  本地安全网关-详细设计文档.md
docs/examples/: 00-核心场景索引与规约.md  01-多资源多Agent授权示例.md  02-资源接入与认证配置.md  03-权限分配与角色管理.md  04-Agent数据面操作与使用业务系统.md  05-越权拒绝与结构化分流.md  06-动态权限调整与失控切断.md  07-审计与红队自检.md
docs/modules/: 00-模块详细设计-索引与规约.md  01-postern-core.md  02-postern-store.md  03-postern-secrets.md  04-postern-transports.md  05-postern-adapters.md  06-postern-daemon.md  07-postern-cli.md
scripts/: run-postern.sh
src/: lib.rs
web/: .eslintrc.cjs  .gitignore  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
web/docs/: 00-设计系统与信息架构.md  01-dashboard.md  02-audit.md  03-denials.md  04-verify.md  05-grants.md  06-roles.md  07-bindings.md  08-constraints-conditions.md  09-resources.md  10-principals-credentials.md  11-mode.md  12-system.md
web/e2e/: audit.spec.ts  bindings.spec.ts  constraints.spec.ts  dashboard.spec.ts  denials.spec.ts  grants.spec.ts  identity.spec.ts  mode.spec.ts  resources.spec.ts  roles.spec.ts  smoke.spec.ts  system.spec.ts  verify.spec.ts
web/src/: main.tsx  vite-env.d.ts
web/src-tauri/: Cargo.toml  tauri.conf.json
web/src-tauri/src/: lib.rs
web/tools/: control-bridge.mjs  run-verify.sh  verify-pages.mjs
(+226 files in other folders)
