[package]
name = "stele-contracts"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# tests/contract/ is not a top-level tests/*.rs file, so cargo needs an explicit target
[[test]]
name = "test_contract"
path = "tests/contract/test_contract.rs"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
once_cell = "1"
