[package]
name = "postern-cli"
version = "0.1.0"
edition = "2021"

# 依赖纪律（07-postern-cli §6.1/§6.4、契约 ARCH_FORBIDDEN_EDGES）：仅依赖 core（共享
# 请求/响应/分页 DTO）加 HTTP-over-UDS 客户端栈（hyper、hyperlocal）、clap、tokio、
# serde/serde_json/thiserror。禁止边 cli ↛ store/secrets：不依赖 postern-store /
# postern-secrets；亦不引入任何被封禁的 id 生成库与裸数据库驱动 / SQL 解析库。
[dependencies]
postern-core = { path = "../postern-core" }
clap = { version = "4", features = ["derive"] }
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
bytes = "1"
tokio = { version = "1", features = ["rt", "macros", "io-util", "io-std", "net", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"

# hyperlocal 是 UDS-only（Unix-only）crate，本身无法在 Windows 目标编译；原生 Windows 端
# 本地 IPC 走 127.0.0.1 TCP（transport/uds.rs 的 cfg(windows) 分支），不需 hyperlocal。
# 故仅在 unix 目标声明此依赖（cli 代码从不直接 import hyperlocal，仅历史文档提及）。
[target.'cfg(unix)'.dependencies]
hyperlocal = "0.9"

[[bin]]
name = "postern"
path = "src/main.rs"

# 接入向导（§3.7）行为测试：测试源 tests/init.rs，测试目标名 init_wizard（与 W2C 单元
# 命名一致，供 `cargo test --test init_wizard` 驱动）。
[[test]]
name = "init_wizard"
path = "tests/init.rs"
