[package]
name = "postern-store"
version = "0.1.0"
edition = "2021"

[dependencies]
postern-core = { path = "../postern-core" }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"

# D2 写基建（持久 policy_rev + 提交/重建编排）的 RED 行为测试。
[[test]]
name = "policy_rev"
path = "tests/policy_rev.rs"
